# conviso-cli

./: .env-example  .env.local.backup  .gitignore  CONTRIBUTING.md  LICENSE  README.md  projects.json  pyproject.toml  sbom.json  vulns-sarif.csv  vulns-sarif.sarif  vulns.sarif
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: version-bump.yml
conviso/: app.py
conviso/clients/: client_graphql.py
conviso/commands/: assets.py  bulk.py  projects.py  requirements.py  vulnerabilities.py
conviso/core/: bulk_loader.py  logger.py  notifier.py  output_manager.py  version.py
conviso/schemas/: projects_schema.py  requirements_schema.py  sbom_schema.py  vulnerabilities_schema.py
docs/: pentest-tasks-guide.md
samples/: assets_sample.csv  requirements_sample.csv  task-assets-create.yaml  task-assets-update.yaml  task-naabu.yaml  task-nmap-nuclei.yaml  task-nuclei-target.yaml  task-nuclei.yaml  task-subfinder-dnsx-naabu.yaml  vulns_sample.csv
src/conviso/: app.py
src/conviso/clients/: client_graphql.py
src/conviso/commands/: accesscontrol.py  assets.py  bulk.py  projects.py  requirements.py  sbom.py  tasks.py  vulnerabilities.py
src/conviso/core/: concurrency.py  doc_generator.py  notifier.py  output_manager.py  output_prefs.py  schema_alias.py  validators.py  version.py
src/conviso/schemas/: assets_schema.py  project_requirements_activities_schema.py  projects_schema.py  vulnerabilities_schema.py  vulnerabilities_timeline_schema.py
tools/: naabu_to_scan_jsonl.py
